--- a/showroom.html
+++ b/showroom.html
@@ -66,30 +66,8 @@
     <div class="section_img">
 
         <div class="container_img_mobile">
-            <img>
-            <div class="slider_img">
-                <div class="element">
-
-                </div>
-                <div class="element">
-
-                </div>
-                <div class="element">
-
-                </div>
-                <div class="element">
-
-                </div>
-                <div class="element">
-
-                </div>
-                <div class="element">
-
-                </div>
-                <div class="element">
-
-                </div>
-            </div>
+            <img src="Immagini/Prodotti/Porte/porta1.jpeg" class='img_mobile'>
+        </div>
 
 
         </div>
