--- a/prodotti.html
+++ b/prodotti.html
@@ -59,110 +59,27 @@
     <div class="sezione_prodotti">
 
         <div class="container_categorie">
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Porte</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Finestre</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Zanzariere</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Tapparelle</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Cassonetti</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Persiane</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Balaustre</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Tende</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Battenti</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Scorrevoli</h2>
-            </div>
-            <div class="item">
-                <div>
-                    <img src="Immagini/SVG/item.svg" alt="item_symbol" width="100%" height="100%">
-                </div>
-                <h2>Saliscendi</h2>
-            </div>
+
         </div>
+
         <div class="container_prodotto">
+
             <div class="container_descrizione_prodotto">
-                <h1>Porte</h1>
-                <p>Porta interna moderna a battente in legno massiccio con finitura laccata.
-                    Il design elegante si adatta perfettamente a ambienti contemporanei, aggiungendo un tocco di stile senza compromettere la funzionalità.
-                    Dotata di maniglie in acciaio inossidabile di alta qualità, questa porta è facile da installare e offre una solida costruzione che garantisce durata nel tempo.
-                    Le dimensioni standard la rendono adatta a una varietà di spazi, mentre il colore neutro si abbina facilmente a qualsiasi arredamento.</p>
-                <div class="freccia_dietro">
-                    <img src="Immagini/SVG/freccia.svg" style="width: 100%; height: 100%; rotate: 180deg;">
-                </div>
-                <div class="freccia_avanti">
-                    <img src="Immagini/SVG/freccia.svg" style="width: 100%; height: 100%">
-                </div>
-            </div>
-            <div class="container_immagini_prodotto">
-
-                <div class="container_main_img">
-                    <img id="main_img" src="Immagini/Prodotti/Porte/porta4.jpeg" alt="porta" style="display:block; width: auto; height: 100%; margin: 0 auto 0 auto;">
-                </div>
-
-                <div class="container_list_sub_img">
-                    <div class="container_sub_img">
-                        <img id="sub_img1" src="Immagini/Prodotti/Porte/porta5.jpeg" alt="porta" style="width: 100%; height: 100%;">
-                    </div>
-                    <div class="container_sub_img">
-                        <img id="sub_img2" src="Immagini/Prodotti/Porte/porta2.jpeg" alt="porta" style="width: 100%; height: 100%;">
-                    </div>
-                    <div class="container_sub_img">
-                        <img id="sub_img3" src="Immagini/Prodotti/Porte/porta3.jpeg" alt="porta" style="width: 100%; height: 100%;">
-                    </div>
-                    <div class="container_sub_img">
-                        <img id="sub_img4" src="Immagini/Prodotti/Porte/materiale.png" alt="porta" style="width: 100%; height: 100%;">
-                    </div>
-                </div>
+                <h1></h1>
+                <p></p>
 
             </div>
+
+            <div class="container_immagini">
+                <img class="immagine_prodotto">
+            </div>
+
+            <div class="mosaico">
+
+            </div>
+
         </div>
+
 
 
 
