--- a/prodotti.html
+++ b/prodotti.html
@@ -72,6 +72,12 @@
 
             <div class="container_immagini">
                 <img class="immagine_prodotto">
+                <div class="circle_container_img">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
             </div>
 
             <div class="mosaico">
