--- a/showroom.html
+++ b/showroom.html
@@ -18,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>ShowRoom</title>
 </head>
-<body onresize="restoreDesktopMenu(); setSizeContainer();" onload="setSizeContainer();">
+<body>
 
     <header>
         <nav class="navbar">
