--- a/prodotti.html
+++ b/prodotti.html
@@ -67,17 +67,14 @@
             <div class="container_descrizione_prodotto">
                 <h1></h1>
                 <p></p>
+                <div class="circle_container_prodotti">
+                </div>
 
             </div>
 
             <div class="container_immagini">
                 <img class="immagine_prodotto">
-                <div class="circle_container_img">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                </div>
+                <div class="circle_container_img"></div>
             </div>
 
             <div class="mosaico">
