--- a/index.html
+++ b/index.html
@@ -185,5 +185,5 @@
 </body>
 <script src="./Script/navbar_effect.js"></script>
 <script src="./Script/home_script.js"></script>
-<script src="./Script/home_animation_script.js"></script>
+<!--<script src="./Script/home_animation_script.js"></script>-->
 </html>
