--- a/prodotti.html
+++ b/prodotti.html
@@ -64,6 +64,13 @@
 
         <div class="container_prodotto">
 
+            <div class="btn_back">
+                <img src="Immagini/SVG/freccia.svg" alt="Indietro" style="width: 100%; height: 100%; rotate: 180deg;">
+            </div>
+            <div class="btn_next">
+                <img src="Immagini/SVG/freccia.svg" alt="Indietro" style="width: 100%; height: 100%;">
+            </div>
+
             <div class="container_descrizione_prodotto">
                 <h1></h1>
                 <p></p>
