--- a/contatti.html
+++ b/contatti.html
@@ -192,5 +192,5 @@
 </body>
 <script src="./Script/navbar_effect.js"></script>
 <script src="./Script/contatti_script.js"></script>
-<script src="./Script/contatti_animation_script.js"></script>
+<script src="Script/Animation/contatti_animation_script.js"></script>
 </html>
