--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img class="logo" src="./Immagini/logo.svg" style="width: 100%; height: 100%">
             </a>
 
-            <!-- hamburger viene visualizzato solamente quando non si è in modalita desktop -->
+
             <div class="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
@@ -44,6 +44,21 @@
     </header>
 
     <div  class="main_img">
+
+        <img class="copertina_main_img" src="Immagini/Copertina/LogoCopertina-Mobile.svg"
+        style="
+            display: block;
+             width: 100%;
+             height: 100%;
+             scale: 1;
+
+             object-fit: cover;
+             position: absolute;
+             top:0;
+             left: 0;
+             z-index: 4;"
+        >
+
         <div class="over-text">
                 <span class="logo_grande">
                     <img src="./Immagini/logo.svg" style="width: 100%; height: 100%;">
@@ -55,6 +70,20 @@
                 </span>
         </div>
     </div>
+    <!--
+    <div  class="main_img">
+        <div class="over-text">
+                <span class="logo_grande">
+                    <img src="./Immagini/logo.svg" style="width: 100%; height: 100%;">
+                </span>
+            <span class="frase_space">
+                    <p class="frase">
+                        Infissi su misura, qualità che si insinua in ogni dettaglio della tua vita quotidiana
+                    </p>
+                </span>
+        </div>
+    </div>
+    -->
 
     <div  class="sezione_bussines_block">
         <div class="bussines_block" style="background-color: #770404;">
@@ -70,7 +99,7 @@
         </div>
         <div class="bussines_block" style="background-color: #191A1A;">
                 <span class="icon_bussines_space">
-                    <img src="./Immagini/SVG/Porta.svg" alt="Porta" style="width:100%; height: 100%;">
+                    <img src="./Immagini/SVG/Porta.svg" alt="Porta" style="object-fit:cover;">
                 </span>
             <span class="bussines_description_space">
                     <p class="descrizioneBussiness">
