--- a/showroom.html
+++ b/showroom.html
@@ -66,7 +66,7 @@
     <div class="section_img">
 
         <div class="container_img_mobile">
-            <img src="Immagini/Prodotti/Porte/porta1.jpeg" class='img_mobile'>
+            <img class='img_mobile'>
         </div>
 
 
@@ -75,35 +75,7 @@
             <button class="close">X</button>
         </div>
 
-        <div class="card-mosaic">
-
-            <div class="card card-tall card-wide" onclick="showImage(event)"
-                 style="background-image: url(../Immagini/Prodotti/Porte/porta1.jpeg);">
-            </div>
-
-            <div class="card card-tall" onclick="showImage(event)"
-                 style="background-image: url(../Immagini/Prodotti/Porte/porta2.jpeg)">
-            </div>
-
-            <div class="card" onclick="showImage(event)"
-                 style="background-image: url(../Immagini/Prodotti/Porte/porta3.jpeg)">
-            </div>
-
-            <div class="card" onclick="showImage(event)"
-                 style="background-image: url(../Immagini/Prodotti/Porte/porta4.jpeg)">
-            </div>
-
-            <div class="card" onclick="showImage(event)"
-                 style="background-image: url(../Immagini/Prodotti/Porte/porta5.jpeg)">
-            </div>
-
-            <div class="card" onclick="showImage(event)"
-                 style="background-image: url(../Immagini/Background/background_2.jpg)">
-            </div>
-
-            <div class="card card-wide" onclick="showImage(event)"
-                 style="background-image: url(../Immagini/Background/background_3.jpg)">
-            </div>
+        <div class="card-mosaic" >
 
         </div>
 
