--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
     </header>
 
-    <div  class="main_img" style="position: fixed">
+    <div  class="main_img" style="position: fixed; z-index: 30;">
 
         <img class="copertina_main_img" src="Immagini/Copertina/LogoCopertina-Mobile.svg"
         style="
@@ -56,10 +56,10 @@
              position: absolute;
              top:0;
              left: 0;
-             z-index: 4;"
+             z-index: 20;"
         >
 
-        <div class="over-text">
+        <div class="over-text" style="z-index: 19">
                 <span class="logo_grande">
                     <img src="./Immagini/logo.svg" style="width: 100%; height: 100%;">
                 </span>
