--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
              position: absolute;
              top:0;
              left: 0;
-             z-index: 20;"
+             z-index: 20;
+             transition: scale 0.1s ease-in-out;"
         >
 
         <div class="over-text" style="z-index: 19">
@@ -84,7 +85,7 @@
         </div>
     </div>
     -->
-
+    <main style="display: block">
     <div  class="sezione_bussines_block">
         <div class="bussines_block" style="background-color: #770404;">
                 <span class="icon_bussines_space">
@@ -172,7 +173,7 @@
             </div>
         </div>
     </div>
-
+    </main>
 
     <footer>
         <div class="info_container">
