--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
              position: absolute;
              top:0;
              left: 0;
-             z-index: 20;
-             transition: scale 0.1s ease-in-out;"
+             z-index: 20;"
         >
 
         <div class="over-text" style="z-index: 19">
@@ -71,21 +70,8 @@
                 </span>
         </div>
     </div>
-    <!--
-    <div  class="main_img">
-        <div class="over-text">
-                <span class="logo_grande">
-                    <img src="./Immagini/logo.svg" style="width: 100%; height: 100%;">
-                </span>
-            <span class="frase_space">
-                    <p class="frase">
-                        Infissi su misura, qualità che si insinua in ogni dettaglio della tua vita quotidiana
-                    </p>
-                </span>
-        </div>
-    </div>
-    -->
-    <main style="display: block">
+
+    <main style="display: none">
     <div  class="sezione_bussines_block">
         <div class="bussines_block" style="background-color: #770404;">
                 <span class="icon_bussines_space">
