--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
     </header>
 
-    <div  class="main_img" style="position: fixed; z-index: 30;">
+    <div  class="main_img" style="position: static; z-index: 30;">
 
         <img class="copertina_main_img" src="Immagini/Copertina/LogoCopertina-Mobile.svg"
         style="
@@ -71,94 +71,93 @@
     </div>
 
     <main style="display: none">
-    <div  class="sezione_bussines_block">
-        <div class="bussines_block" style="background-color: #770404;">
-                <span class="icon_bussines_space">
-                    <img src="./Immagini/SVG/Finestra.svg" alt="Finesta" style="width:100%; height: 100%">
-                </span>
+        <div  class="sezione_bussines_block">
+            <div class="bussines_block" style="background-color: #770404;">
+                    <span class="icon_bussines_space">
+                        <img src="./Immagini/SVG/Finestra.svg" alt="Finesta" style="width:100%; height: 100%">
+                    </span>
 
-            <span  class="bussines_description_space">
-                    <p class="descrizioneBussiness">
-                       Immergiti nell'arte dell'eleganza e dell'eccellenza con la nostra straordinaria collezione di infissi. Ogni dettaglio è un capolavoro di design, dove la forma incontra la funzione in un equilibrio perfetto.
-                    </p>
-                </span>
-        </div>
-        <div class="bussines_block" style="background-color: #191A1A;">
-                <span class="icon_bussines_space">
-                    <img src="./Immagini/SVG/Porta.svg" alt="Porta" style="object-fit:cover;">
-                </span>
-            <span class="bussines_description_space">
-                    <p class="descrizioneBussiness">
-                       Esplora il culmine dell'eleganza e dell'eccellenza attraverso la nostra superba collezione di porte. Ogni elemento è una sinfonia di design, in cui estetica e funzionalità convergono in una fusione armoniosa.
-                    </p>
-                </span>
-        </div>
-    </div>
-
-    <div  class="section" id="chiSiamo">
-        <div class="descrizione_sezione">
-
-            <h1 class="header_style">CHI SIAMO</h1>
-            <p class="body_style">Entra con fiducia nel nostro universo, dove la nostra storia è intessuta di anni di esperienza e di un impegno incessante per l'eccellenza.
-                Oltre ad essere fornitori di infissi, siamo artigiani appassionati che plasmano il tuo spazio abitativo con cura e maestria.
-                Naviga attraverso la sezione 'Chi Siamo' per scoprire il nostro patrimonio, i valori che ci guidano e la forza trainante dietro ogni prodotto che produciamo.
-                La tua casa merita il meglio, e noi siamo qui per offrirtelo. Benvenuto nel cuore di Inda.</p>
-            <div class="list_parole_chiavi">
-                <p class="parola_chiave">Infissi</p>
-                <span class="circle"></span>
-                <p class="parola_chiave">Porte</p>
-                <span class="circle"></span>
-                <p class="parola_chiave">Serramenti</p>
+                <span  class="bussines_description_space">
+                        <p class="descrizioneBussiness">
+                           Immergiti nell'arte dell'eleganza e dell'eccellenza con la nostra straordinaria collezione di infissi. Ogni dettaglio è un capolavoro di design, dove la forma incontra la funzione in un equilibrio perfetto.
+                        </p>
+                    </span>
             </div>
-            <button class="btn_chisiamo">LA NOSTRA STORIA</button>
-
-        </div>
-        <div class="immagine_sezione">
-            <div class="img_bg"></div>
-            <div class="img_container">
-                <img src="./Immagini/Background/background_13.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%">
+            <div class="bussines_block" style="background-color: #191A1A;">
+                    <span class="icon_bussines_space">
+                        <img src="./Immagini/SVG/Porta.svg" alt="Porta" style="object-fit:cover;">
+                    </span>
+                <span class="bussines_description_space">
+                        <p class="descrizioneBussiness">
+                           Esplora il culmine dell'eleganza e dell'eccellenza attraverso la nostra superba collezione di porte. Ogni elemento è una sinfonia di design, in cui estetica e funzionalità convergono in una fusione armoniosa.
+                        </p>
+                    </span>
             </div>
         </div>
-    </div>
 
-    <div  class="section" id="showroom">
-        <div class="immagine_sezione" onload="setSizeContainerShowRoom();">
-            <img src="./Immagini/Background/background_14.jpg" style="width: 100%; height: 100%">
-        </div>
-        <div class="descrizione_sezione">
-            <h1 class="header_style">IL NOSTRO<br>SHOW ROOM</h1>
-            <p  class="body_style">Benvenuto nell'epicentro del nostro mondo di eleganza e innovazione: il nostro esclusivo Showroom.
-                Immagina un luogo dove il design prende vita e dove ogni finestra e porta diventano un'opera d'arte funzionale.
-                Nel nostro Showroom, ti invitiamo a esplorare un panorama avvincente di stili,
-                materiali e dettagli impeccabili che trasformano le abitazioni in spazi straordinari.
-                Il nostro spazio espositivo è concepito per ispirare le tue scelte, offrendoti la possibilità di toccare con mano la qualità dei materiali e di visualizzare
-                l'impatto visivo dei nostri infissi in ambienti reali. Entra nel nostro mondo e lasciati guidare dalla passione per l'eccellenza
-                che caratterizza ogni dettaglio dei nostri prodotti.
-            </p>
-            <button class="btn_showroom">ESPLORA IL NOSTRO SHOWROOM</button>
-        </div>
-    </div>
+        <div  class="section" id="chiSiamo">
+            <div class="descrizione_sezione">
 
-    <div  class="section" id="prodotti">
-        <div class="descrizione_sezione">
+                <h1 class="header_style">CHI SIAMO</h1>
+                <p class="body_style">Entra con fiducia nel nostro universo, dove la nostra storia è intessuta di anni di esperienza e di un impegno incessante per l'eccellenza.
+                    Oltre ad essere fornitori di infissi, siamo artigiani appassionati che plasmano il tuo spazio abitativo con cura e maestria.
+                    Naviga attraverso la sezione 'Chi Siamo' per scoprire il nostro patrimonio, i valori che ci guidano e la forza trainante dietro ogni prodotto che produciamo.
+                    La tua casa merita il meglio, e noi siamo qui per offrirtelo. Benvenuto nel cuore di Inda.</p>
+                <div class="list_parole_chiavi">
+                    <p class="parola_chiave">Infissi</p>
+                    <span class="circle"></span>
+                    <p class="parola_chiave">Porte</p>
+                    <span class="circle"></span>
+                    <p class="parola_chiave">Serramenti</p>
+                </div>
+                <button class="btn_chisiamo">LA NOSTRA STORIA</button>
 
-            <h1 class="header_style">I NOSTRI PRODOTTI</h1>
-            <p class="body_style">Esplora la nostra esclusiva gamma di Prodotti, progettati per trasformare la tua casa in uno spazio elegante, sicuro e confortevole.
-                Dalla finestra alla porta, ogni nostro prodotto è realizzato con cura artigianale e materiali di alta qualità, garantendo durata,
-                efficienza energetica e stile senza compromessi.
-                Scopri la collezione completa dei nostri Prodotti e porta il comfort e lo stile nella tua casa oggi.</p>
-            <button class="btn_prodotti">SCOPRI I NOSTRI PRODOTTI</button>
-
-        </div>
-        <div class="immagine_sezione">
-            <div class="img_bg1"></div>
-            <div class="img_bg2"></div>
-            <div class="img_container">
-                <img src="./Immagini/Background/background_15.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%">
+            </div>
+            <div class="immagine_sezione">
+                <div class="img_bg"></div>
+                <div class="img_container">
+                    <img src="./Immagini/Background/background_13.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%">
+                </div>
             </div>
         </div>
-    </div>
-    </main>
+
+        <div  class="section" id="showroom">
+            <div class="immagine_sezione" onload="setSizeContainerShowRoom();">
+                <img src="./Immagini/Background/background_14.jpg" style="width: 100%; height: 100%">
+            </div>
+            <div class="descrizione_sezione">
+                <h1 class="header_style">IL NOSTRO<br>SHOW ROOM</h1>
+                <p  class="body_style">Benvenuto nell'epicentro del nostro mondo di eleganza e innovazione: il nostro esclusivo Showroom.
+                    Immagina un luogo dove il design prende vita e dove ogni finestra e porta diventano un'opera d'arte funzionale.
+                    Nel nostro Showroom, ti invitiamo a esplorare un panorama avvincente di stili,
+                    materiali e dettagli impeccabili che trasformano le abitazioni in spazi straordinari.
+                    Il nostro spazio espositivo è concepito per ispirare le tue scelte, offrendoti la possibilità di toccare con mano la qualità dei materiali e di visualizzare
+                    l'impatto visivo dei nostri infissi in ambienti reali. Entra nel nostro mondo e lasciati guidare dalla passione per l'eccellenza
+                    che caratterizza ogni dettaglio dei nostri prodotti.
+                </p>
+                <button class="btn_showroom">ESPLORA IL NOSTRO SHOWROOM</button>
+            </div>
+        </div>
+
+        <div  class="section" id="prodotti">
+            <div class="descrizione_sezione">
+
+                <h1 class="header_style">I NOSTRI PRODOTTI</h1>
+                <p class="body_style">Esplora la nostra esclusiva gamma di Prodotti, progettati per trasformare la tua casa in uno spazio elegante, sicuro e confortevole.
+                    Dalla finestra alla porta, ogni nostro prodotto è realizzato con cura artigianale e materiali di alta qualità, garantendo durata,
+                    efficienza energetica e stile senza compromessi.
+                    Scopri la collezione completa dei nostri Prodotti e porta il comfort e lo stile nella tua casa oggi.</p>
+                <button class="btn_prodotti">SCOPRI I NOSTRI PRODOTTI</button>
+
+            </div>
+            <div class="immagine_sezione">
+                <div class="img_bg1"></div>
+                <div class="img_bg2"></div>
+                <div class="img_container">
+                    <img src="./Immagini/Background/background_15.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%">
+                </div>
+            </div>
+        </div>
 
     <footer>
         <div class="info_container">
@@ -196,6 +195,7 @@
 
 
     </footer>
+    </main>
 
 </body>
 <script src="./Script/navbar_effect.js"></script>
