--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
     <div  class="main_img" style="position: static; z-index: 30;">
 
-        <img class="copertina_main_img" src="Immagini/Copertina/LogoCopertina-Mobile.svg"
-        style="
+        <div class="copertina_main_img" style="
              display: block;
              width: 100%;
              height: 100%;
@@ -55,8 +54,12 @@
              position: absolute;
              top:0;
              left: 0;
-             z-index: 20;"
+             z-index: 20;
+            background:url(Immagini/Copertina/LogoCopertina-Mobile.svg) no-repeat center center;
+            background-size: cover"
         >
+
+        </div>
 
         <div class="over-text" style="z-index: 19">
                 <span class="logo_grande">
