--- a/index.html
+++ b/index.html
@@ -203,5 +203,5 @@
 </body>
 <script src="./Script/navbar_effect.js"></script>
 <script src="./Script/home_script.js"></script>
-<!--<script src="./Script/home_animation_script.js"></script>-->
+<script src="./Script/Animation/home_animation_script.js"></script>
 </html>
