--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <span class="circle"></span>
                     <p class="parola_chiave">Serramenti</p>
                 </div>
-                <button class="btn_chisiamo">LA NOSTRA STORIA</button>
+                <a href="chisiamo.html" style="text-decoration: none"><<button class="btn_chisiamo">LA NOSTRA STORIA</button></a>
 
             </div>
             <div class="immagine_sezione">
