--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <span class="circle"></span>
                     <p class="parola_chiave">Serramenti</p>
                 </div>
-                <a href="chisiamo.html" style="text-decoration: none"><button class="btn_chisiamo">LA NOSTRA STORIA</button></a>
+                <button class="btn_chisiamo" onclick="location.href = 'chisiamo.html'">LA NOSTRA STORIA</button>
 
             </div>
             <div class="immagine_sezione">
