--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="immagine_sezione">
                 <div class="img_bg"></div>
                 <div class="img_container">
-                    <img src="./Immagini/Background/background_13.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%">
+                    <img src="./Immagini/Background/background_13.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black;">
                 </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
                 <div class="img_bg1"></div>
                 <div class="img_bg2"></div>
                 <div class="img_container">
-                    <img src="./Immagini/Background/background_15.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%">
+                    <img src="./Immagini/Background/background_15.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black;">
                 </div>
             </div>
         </div>
