--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <span class="circle"></span>
                     <p class="parola_chiave">Serramenti</p>
                 </div>
-                <button class="btn_chisiamo" onclick="location.href = 'chisiamo.html'">LA NOSTRA STORIA</button>
+                <button class="btn_chisiamo" onclick="location.href = 'chisiamo.html'" ontouchstart="location.href = 'chisiamo.html'">LA NOSTRA STORIA</button>
 
             </div>
             <div class="immagine_sezione">
@@ -138,7 +138,7 @@
                     l'impatto visivo dei nostri infissi in ambienti reali. Entra nel nostro mondo e lasciati guidare dalla passione per l'eccellenza
                     che caratterizza ogni dettaglio dei nostri prodotti.
                 </p>
-                <button class="btn_showroom">ESPLORA IL NOSTRO SHOWROOM</button>
+                <button class="btn_showroom" onclick="location.href = 'showroom.html'" ontouchstart="location.href = 'showroom.html'">ESPLORA IL NOSTRO SHOWROOM</button>
             </div>
         </div>
 
@@ -150,7 +150,7 @@
                     Dalla finestra alla porta, ogni nostro prodotto è realizzato con cura artigianale e materiali di alta qualità, garantendo durata,
                     efficienza energetica e stile senza compromessi.
                     Scopri la collezione completa dei nostri Prodotti e porta il comfort e lo stile nella tua casa oggi.</p>
-                <button class="btn_prodotti">SCOPRI I NOSTRI PRODOTTI</button>
+                <button class="btn_prodotti" onclick="location.href = 'prodotti.html'" ontouch="location.href = 'prodotti.html'">SCOPRI I NOSTRI PRODOTTI</button>
 
             </div>
             <div class="immagine_sezione">
