--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     Dalla finestra alla porta, ogni nostro prodotto è realizzato con cura artigianale e materiali di alta qualità, garantendo durata,
                     efficienza energetica e stile senza compromessi.
                     Scopri la collezione completa dei nostri Prodotti e porta il comfort e lo stile nella tua casa oggi.</p>
-                <button class="btn_prodotti" onclick="location.href = 'prodotti.html'" ontouch="location.href = 'prodotti.html'">SCOPRI I NOSTRI PRODOTTI</button>
+                <button class="btn_prodotti" onclick="location.href = 'prodotti.html'" ontouchstart="location.href = 'prodotti.html'">SCOPRI I NOSTRI PRODOTTI</button>
 
             </div>
             <div class="immagine_sezione">
